--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
     <script type="text/javascript">
         (function(){
-            emailjs.init("user_WLzewtD3Jn5L472Te06hC");
+            emailjs.init("xxxxxxxxxxxxxxxxxxxx");
         })();
     </script>
     <!--
